--- a/learn-bizapps-pr/flow/get-started-with-flow/3-flow-mobile-app.yml
+++ b/learn-bizapps-pr/flow/get-started-with-flow/3-flow-mobile-app.yml
@@ -1,19 +1,19 @@
 ### YamlMime:ModuleUnit
 uid: learn-bizapps.flow-get-started.3-flow-mobile-app
-title: <span data-ttu-id="a3fe6-101">Mobile App für Microsoft Flow</span><span class="sxs-lookup"><span data-stu-id="a3fe6-101">Microsoft Flow mobile app</span></span>
+title: <span data-ttu-id="a006b-101">Mobile App für Microsoft Flow</span><span class="sxs-lookup"><span data-stu-id="a006b-101">Microsoft Flow mobile app</span></span>
 metadata:
-  title: <span data-ttu-id="a3fe6-102">Mobile App für Microsoft Flow</span><span class="sxs-lookup"><span data-stu-id="a3fe6-102">Microsoft Flow mobile app</span></span>
-  description: <span data-ttu-id="a3fe6-103">Erfahren Sie, wie Sie die mobile Microsoft Flow-App nutzen können.</span><span class="sxs-lookup"><span data-stu-id="a3fe6-103">Learn how to use the Microsoft Flow mobile app.</span></span>
+  title: <span data-ttu-id="a006b-102">Mobile App für Microsoft Flow</span><span class="sxs-lookup"><span data-stu-id="a006b-102">Microsoft Flow mobile app</span></span>
+  description: <span data-ttu-id="a006b-103">Erfahren Sie, wie Sie die mobile Microsoft Flow-App nutzen können.</span><span class="sxs-lookup"><span data-stu-id="a006b-103">Learn how to use the Microsoft Flow mobile app.</span></span>
   ms.date: 09/24/2018
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-flow
-  ms.openlocfilehash: dc45b7c38094046ddee01c6b75cad0f1c30bbdd7
-  ms.sourcegitcommit: a6cdd11ea6d5cffdd264c005b6e2f15c00854553
+  ms.openlocfilehash: f049a833d47c5e46622e8e9f326e686018a9192e
+  ms.sourcegitcommit: a862eb6aa7114c827ba5780c3b2daa99cb5aed97
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/10/2018
-  ms.locfileid: "44330240"
-durationInMinutes: 15
+  ms.lasthandoff: 09/13/2018
+  ms.locfileid: "45556979"
+durationInMinutes: 5
 content: '[!include[](includes/3-flow-mobile-app.md)]'
