--- a/learn-bizapps-pr/powerapps/manage-apps-in-powerapps/index.yml
+++ b/learn-bizapps-pr/powerapps/manage-apps-in-powerapps/index.yml
@@ -8,17 +8,17 @@ metadata:
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerapps
-  ms.openlocfilehash: b0d5977a99c331f2a8f8b2351266a41db8c2a4ce
-  ms.sourcegitcommit: 1e4ec50e3f3c2902d4342a9587f6cc5848193a1e
+  ms.openlocfilehash: e2ee74a04f41c24dbdcb4236365cae876b901081
+  ms.sourcegitcommit: 19236e5c58c29cfa95f8c68b280c7234cdfaf7e2
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/13/2018
-  ms.locfileid: "45532656"
+  ms.lasthandoff: 09/14/2018
+  ms.locfileid: "45600642"
 title: Verwalten von Apps in PowerApps
 summary: Verwalten Sie App-Versionen, App-Freigaben und Umgebungen in PowerApps.
-abstract: "Aufgaben in diesem Modul: \n- Lernen Sie, wie Sie App-Versionen überprüfen und wiederherstellen können.\n- Finden Sie heraus, wie Sie eine App freigeben, einschließlich Berechtigungen und Benachrichtigungen.\n- Erfahren Sie, was Umgebungen sind, wie sie erstellt werden und wie die Sicherheitsverwaltung funktioniert.\n- Erhalten Sie weitere Informationen zu PowerApps.\n"
+abstract: "In diesem Modul wird Folgendes thematisiert: \n- Überprüfen und Wiederherstellen von App-Versionen\n- Freigeben einer App, einschließlich Berechtigungen und Benachrichtigungen\n- Verstehen und Erstellen von Umgebungen sowie das Verwalten der Sicherheit\n- Weitere Informationen zu PowerApps\n"
 prerequisites: Keine
-iconUrl: http://via.placeholder.com/120x120
+iconUrl: /learn/achievements/manage-apps-in-powerapps.svg
 levels:
 - beginner
 roles:
