--- a/learn-bizapps-pr/flow/use-flow-to-create-an-approval-flow/4-summary-cleanup.yml
+++ b/learn-bizapps-pr/flow/use-flow-to-create-an-approval-flow/4-summary-cleanup.yml
@@ -1,15 +1,19 @@
-### YamlMime:ModuleUnit 
+### YamlMime:ModuleUnit
 uid: learn-bizapps.flow-create-approval.4-summary-cleanup
-title: Review what you've learned about approval flows 
-metadata: 
-  title: Review what you've learned about approval flows 
-  description: Review what you've learned about approval flows.
+title: Folgendes haben Sie über Genehmigungsflows erfahren
+metadata:
+  title: Folgendes haben Sie über Genehmigungsflows erfahren
+  description: Folgendes haben Sie über Genehmigungsflows erfahren.
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-flow
-durationInMinutes: 2 
-content: | 
-  [!include[](includes/4-summary-cleanup.md)]  
+  ms.openlocfilehash: 7f520a2209261504aba7de5fe4076a0ee53bcc40
+  ms.sourcegitcommit: 0d11bb189c04e6a809981a561a7cbbb59fd8e5ae
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/15/2018
+  ms.locfileid: "45651524"
+durationInMinutes: 2
+content: '[!include[](includes/4-summary-cleanup.md)]'
