--- a/learn-bizapps-pr/powerapps/customize-apps-in-powerapps/index.yml
+++ b/learn-bizapps-pr/powerapps/customize-apps-in-powerapps/index.yml
@@ -8,12 +8,12 @@ metadata:
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerapps
-  ms.openlocfilehash: ed28032ad20e58e8ab9af1b1d19e1a9227ba0f1c
-  ms.sourcegitcommit: 19236e5c58c29cfa95f8c68b280c7234cdfaf7e2
+  ms.openlocfilehash: 01db1a4dda6f6d61b06c75605f57e347e1b269a6
+  ms.sourcegitcommit: 0d11bb189c04e6a809981a561a7cbbb59fd8e5ae
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2018
-  ms.locfileid: "45600596"
+  ms.lasthandoff: 09/15/2018
+  ms.locfileid: "45651363"
 title: Anpassen einer App
 summary: Finden Sie heraus, wie Sie eine App anpassen, indem Sie Steuerelemente, Bilder und Logik hinzufügen.
 abstract: >
@@ -49,4 +49,5 @@ units:
 - learn-bizapps.powerapps-customize.2-powerapps-explore
 - learn-bizapps.powerapps-customize.3-powerapps-functions
 - learn-bizapps.powerapps-customize.4-quiz-customize-an-app
+- learn-bizapps.powerapps-customize.5-summary-cleanup
 achievement: learn.powerapps-customize.badge
