--- a/learn-bizapps-pr/powerapps/manage-apps-in-powerapps/index.yml
+++ b/learn-bizapps-pr/powerapps/manage-apps-in-powerapps/index.yml
@@ -8,12 +8,12 @@ metadata:
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerapps
-  ms.openlocfilehash: e2ee74a04f41c24dbdcb4236365cae876b901081
-  ms.sourcegitcommit: 19236e5c58c29cfa95f8c68b280c7234cdfaf7e2
+  ms.openlocfilehash: 46074d53cafc74824ae3dc10078823989b4b2d67
+  ms.sourcegitcommit: 0d11bb189c04e6a809981a561a7cbbb59fd8e5ae
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2018
-  ms.locfileid: "45600642"
+  ms.lasthandoff: 09/15/2018
+  ms.locfileid: "45650765"
 title: Verwalten von Apps in PowerApps
 summary: Verwalten Sie App-Versionen, App-Freigaben und Umgebungen in PowerApps.
 abstract: "In diesem Modul wird Folgendes thematisiert: \n- Überprüfen und Wiederherstellen von App-Versionen\n- Freigeben einer App, einschließlich Berechtigungen und Benachrichtigungen\n- Verstehen und Erstellen von Umgebungen sowie das Verwalten der Sicherheit\n- Weitere Informationen zu PowerApps\n"
@@ -33,4 +33,5 @@ units:
 - learn-bizapps.powerapps-manage.3-powerapps-environments
 - learn-bizapps.powerapps-manage.4-review-powerapps
 - learn-bizapps.powerapps-manage.5-quiz-manage-apps
+- learn-bizapps.powerapps-manage.6-summary-cleanup
 achievement: learn.powerapps-manage.badge
