--- a/learn-bizapps-pr/power-bi/get-started-with-power-bi/2-using-power-bi.yml
+++ b/learn-bizapps-pr/power-bi/get-started-with-power-bi/2-using-power-bi.yml
@@ -1,19 +1,19 @@
 ### YamlMime:ModuleUnit
 uid: learn-bizapps.get-started-with-power-bi.2-using-power-bi
 metadata:
-  title: <span data-ttu-id="327ef-101">Verwenden von Power BI</span><span class="sxs-lookup"><span data-stu-id="327ef-101">Using Power BI</span></span>
-  description: <span data-ttu-id="327ef-102">Verwenden von Power BI</span><span class="sxs-lookup"><span data-stu-id="327ef-102">Using Power BI</span></span>
+  title: <span data-ttu-id="40fdd-101">Verwenden von Power BI</span><span class="sxs-lookup"><span data-stu-id="40fdd-101">Use Power BI</span></span>
+  description: <span data-ttu-id="40fdd-102">Verwenden von Power BI</span><span class="sxs-lookup"><span data-stu-id="40fdd-102">Use Power BI</span></span>
   ms.date: 09/24/2018
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerbi
-  ms.openlocfilehash: 2422478ea78552ca3e1645dc68fce4f9e4220535
-  ms.sourcegitcommit: 88398f21cabb7c194b4292d6f3a4a10049eab76d
+  ms.openlocfilehash: c13501938e5fe214164d062e3011e477e95ca140
+  ms.sourcegitcommit: 0d11bb189c04e6a809981a561a7cbbb59fd8e5ae
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/12/2018
-  ms.locfileid: "44500648"
-title: <span data-ttu-id="327ef-103">Verwenden von Power BI</span><span class="sxs-lookup"><span data-stu-id="327ef-103">Using Power BI</span></span>
+  ms.lasthandoff: 09/15/2018
+  ms.locfileid: "45650977"
+title: <span data-ttu-id="40fdd-103">Verwenden von Power BI</span><span class="sxs-lookup"><span data-stu-id="40fdd-103">Use Power BI</span></span>
 durationInMinutes: 4
 content: '[!include[](includes/2-using-power-bi.md)]'
