--- a/learn-bizapps-pr/flow/get-started-with-flow/index.yml
+++ b/learn-bizapps-pr/flow/get-started-with-flow/index.yml
@@ -8,16 +8,24 @@ metadata:
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-flow
-  ms.openlocfilehash: 549ee00b9549867251101f3fa1b359aeadd67cac
-  ms.sourcegitcommit: 0d11bb189c04e6a809981a561a7cbbb59fd8e5ae
+  ms.openlocfilehash: 584284ed65461dcbc20faa856f2d657fdae9deb7
+  ms.sourcegitcommit: 255768424a95e14dc5767f1710feb755467861ee
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/15/2018
-  ms.locfileid: "45651179"
+  ms.lasthandoff: 09/18/2018
+  ms.locfileid: "46119998"
 title: Erste Schritte mit Microsoft Flow
 summary: Microsoft Flow ist ein Onlineworkflowdienst, der Ereignisse (sogenannte *Workflows*) für die gängigsten Apps und Dienste automatisiert.
-abstract: In diesem Modul erstellen Sie einen Flow, der E-Mail-Anlagen automatisch speichert. Außerdem erfahren Sie, wie Sie einen Schaltflächenflow erstellen, um eine Erinnerung an sich selbst zu senden.
-prerequisites: Sie müssen für Microsoft Flow registriert sein und über ein OneDrive for Business-Konto verfügen.
+abstract: >
+  Aufgaben in diesem Modul:
+
+  - Erstellen Sie einen Flow, der E-Mail-Anlagen automatisch speichert.
+
+  - Außerdem erfahren Sie, wie Sie einen Schaltflächenflow erstellen, um eine Erinnerung an sich selbst zu senden.
+prerequisites: >
+  - Registrieren Sie sich für Microsoft Flow.
+
+  - Erstellen Sie ein OneDrive for Business-Konto.
 iconUrl: /learn/achievements/get-started-with-flow.svg
 levels:
 - beginner
