--- a/learn-bizapps-pr/flow/use-flow-to-create-an-approval-flow/index.yml
+++ b/learn-bizapps-pr/flow/use-flow-to-create-an-approval-flow/index.yml
@@ -8,16 +8,17 @@ metadata:
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-flow
-  ms.openlocfilehash: 61e71adae79d77dff0254a474a95d100637a678e
-  ms.sourcegitcommit: 0d11bb189c04e6a809981a561a7cbbb59fd8e5ae
+  ms.openlocfilehash: cdcdc8a5610a27d0dff72e6ddbe34cd4010f64f6
+  ms.sourcegitcommit: 255768424a95e14dc5767f1710feb755467861ee
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/15/2018
-  ms.locfileid: "45651133"
+  ms.lasthandoff: 09/18/2018
+  ms.locfileid: "46119929"
 title: Erstellen eines Genehmigungsflows
-summary: Machen Sie sich mit den Grundlagen der Erstellung eines Genehmigungsflows für eine SharePoint-Liste vertraut.
-abstract: In diesem Modul erstellen Sie einen Genehmigungsflow, der eine SharePoint-Liste verwendet. Sie erfahren, wie Sie eine SharePoint-Liste erstellen, in der Benutzer Twitter-Tweets vorschlagen, die später genehmigt und veröffentlicht werden können.
-prerequisites: Rechte zum Erstellen einer SharePoint-Liste, Twitter-Konto
+summary: Lernen Sie die Grundlagen für das Erstellen eines Genehmigungsflows für eine SharePoint-Liste kennen.
+abstract: "Aufgaben in diesem Modul:\n- Erstellen Sie einen Genehmigungsflow, der eine SharePoint-Liste verwendet. \n- Erfahren Sie, wie Sie eine SharePoint-Liste erstellen, in der Benutzer Twitter-Tweets vorschlagen, die später genehmigt und veröffentlicht werden können.\n"
+prerequisites: >
+  - Rechte zum Erstellen einer SharePoint-Liste, Twitter-Konto
 iconUrl: /learn/achievements/use-flow-to-create-an-approval-flow.svg
 levels:
 - beginner
