--- a/learn-bizapps-pr/power-bi/get-started-with-power-bi/4-exercise-touring-and-using-power-bi.yml
+++ b/learn-bizapps-pr/power-bi/get-started-with-power-bi/4-exercise-touring-and-using-power-bi.yml
@@ -1,19 +1,19 @@
 ### YamlMime:ModuleUnit
 uid: learn-bizapps.get-started-with-power-bi.4-exercise-touring-and-using-power-bi
 metadata:
-  title: 'Übung: Einführung in den Power BI-Dienst und dessen Verwendung'
-  description: 'Übung: Einführung in den Power BI-Dienst und dessen Verwendung'
+  title: Einführung in den Power BI-Dienst und dessen Verwendung
+  description: Einführung in den Power BI-Dienst und dessen Verwendung
   ms.date: 09/24/2018
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerbi
-  ms.openlocfilehash: 47e0b6deeb8e182a61939780f48704e6fcd3909d
-  ms.sourcegitcommit: 0d11bb189c04e6a809981a561a7cbbb59fd8e5ae
+  ms.openlocfilehash: a6f6dff692518961e0e49dcd81bb3ba124f80535
+  ms.sourcegitcommit: 255768424a95e14dc5767f1710feb755467861ee
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/15/2018
-  ms.locfileid: "45651041"
-title: 'Übung: Einführung in den Power BI-Dienst und dessen Verwendung'
+  ms.lasthandoff: 09/18/2018
+  ms.locfileid: "46119860"
+title: Einführung in den Power BI-Dienst und dessen Verwendung
 durationInMinutes: 12
 content: '[!include[](includes/4-exercise-touring-and-using-power-bi.md)]'
