--- a/learn-bizapps-pr/powerapps/get-started-with-powerapps/index.yml
+++ b/learn-bizapps-pr/powerapps/get-started-with-powerapps/index.yml
@@ -8,25 +8,26 @@ metadata:
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerapps
-  ms.openlocfilehash: 1a433b0a6913ec7669b70878add274b8e419d67b
-  ms.sourcegitcommit: 0d11bb189c04e6a809981a561a7cbbb59fd8e5ae
+  ms.openlocfilehash: c0ea54ef24c76628e524e5f3af7bca940a310444
+  ms.sourcegitcommit: 255768424a95e14dc5767f1710feb755467861ee
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/15/2018
-  ms.locfileid: "45651204"
+  ms.lasthandoff: 09/18/2018
+  ms.locfileid: "46119952"
 title: Erste Schritte mit PowerApps
 summary: Lernen Sie die Grundlagen von PowerApps kennen, und erfahren Sie, wie Sie das Tool in Ihrer Organisation einsetzen können.
 abstract: >
-  In diesem Modul erfahren Sie,
+  Aufgaben in diesem Modul:
 
-  - Wie PowerApps zur Effizienz Ihres Unternehmens beitragen kann
+  - Lernen Sie, wie PowerApps zur Effizienz Ihres Unternehmens beitragen kann.
 
-  - Wie Sie mit verschiedenen Technologien unterschiedliche Aufgaben in PowerApps erledigen
+  - Erfahren Sie, wie Sie mit verschiedenen Technologien unterschiedliche Aufgaben in PowerApps erledigen.
 
   - Welche Möglichkeiten Sie zum Erstellen einer App in PowerApps haben
 
   - Wie Sie Ihre erste App aus Daten in einer Excel-Arbeitsmappe erstellen
-prerequisites: Zugriff auf Microsoft Excel und OneDrive for Business
+prerequisites: >
+  - Zugriff auf Microsoft Excel und OneDrive for Business
 iconUrl: /learn/achievements/get-started-with-powerapps.svg
 levels:
 - beginner
